# Factory-Robot-MVP-

./: .gitignore  README.md
.github/workflows/: pages.yml
docker/: Dockerfile  Dockerfile.vision  docker-compose.yml  entrypoint.sh
docs/: architecture.md  deployment_guide.md  design_doc.md  index.html  setup_guide.md
src/factory_robot_description/: CMakeLists.txt  package.xml
src/factory_robot_description/launch/: robot_spawn.launch.py
src/factory_robot_description/urdf/: gazebo_plugins.xacro  robot.urdf.xacro
src/factory_robot_description/urdf/sensors/: depth_camera.xacro  lidar.xacro
src/factory_world/: CMakeLists.txt  package.xml
src/factory_world/launch/: factory_world.launch.py
src/factory_world/worlds/: factory_world.sdf
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: robot_factory.launch.py
src/robot_gripper/: CMakeLists.txt  package.xml
src/robot_gripper/config/: gripper_controller.yaml
src/robot_gripper/launch/: gripper.launch.py
src/robot_gripper/urdf/: gripper.urdf.xacro
src/robot_slam/: CMakeLists.txt  package.xml
src/robot_slam/config/: nav2_params.yaml  slam_toolbox.yaml
src/robot_slam/launch/: navigation.launch.py  slam.launch.py
src/robot_vision/: package.xml  setup.py
src/robot_vision/config/: yolo_detector.yaml
src/robot_vision/launch/: yolo.launch.py
src/robot_vision/robot_vision/: yolo_detector.py
